--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
           </h1>
         </div>
         <div class=" mt-3" id="button-sec">
-          <button class="btn btn-secondary p-2 fs-4">
+          <button class="btn btn-secondary p-2 fs-4" routerLink="/register">
             <div class="text-start fs-4 px-3 m-0">
                 <p>Let's get Started</p>
             </div>
