--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,9 @@
 body {
-    margin-top: 56px;
-    height: 100%;
-    width: 100%;
-    background-image: url("./assets/home-bg-image.jpg");
-    background-attachment: fixed;
-    background-size: cover;
+    padding-top: 56px; /* Adjust based on the height of your navbar */
+    margin: 0;
+    img {
+        height: 100vh;
+        width: 100%;
+        position: fixed;
+    }
 }
