--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-light">
+<nav class="navbar navbar-expand-lg bg-light fixed-top">
   <div class="container">
     <a class="navbar-brand">Quiz Website</a>
     <button
@@ -24,14 +24,10 @@
           <a class="nav-link" href="#">Contact</a>
         </li>
         <li class="nav-item">
-          <a class="btn btn-outline-secondary me-3" routerLink="/register"
-            >Sign Up</a
-          >
+          <a class="btn btn-outline-secondary me-3" routerLink="/register">Sign Up</a>
         </li>
         <li class="nav-item">
-          <a class="btn btn-outline-secondary me-3" routerLink="/login"
-            >Login</a
-          >
+          <a class="btn btn-outline-secondary me-3" routerLink="/login">Login</a>
         </li>
       </ul>
     </div>
