--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -3,9 +3,9 @@
     margin: 0;
 }
 #home-section {
-    height: 100vh;
     width: 100%;
-}
+    position: fixed;
+  }
 #home-sec {
     height: 80vh; 
     flex-direction: column;
