created login page and format codebase

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <body>
-  <app-header></app-header>
   <img src="images/home-bg-image.jpg" />
-  <router-outlet></router-outlet>
+  <div class="container-fluid">
+    <app-header></app-header>
+    <router-outlet></router-outlet>
+  </div>
 </body>
-
