--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,9 +1,13 @@
 body {
-    padding-top: 56px; /* Adjust based on the height of your navbar */
-    margin: 0;
-    img {
-        height: 100vh;
-        width: 100%;
-        position: fixed;
-    }
+  padding-top: 42px; /* Adjust based on the height of your navbar */
+  margin: 0;
+  img {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+  }
+}
+.container-fluid {
+  width: 100%;
+  position: relative;
 }
