--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -24,10 +24,14 @@
           <a class="nav-link" href="#">Contact</a>
         </li>
         <li class="nav-item">
-          <a class="btn btn-outline-secondary me-3" routerLink="/register">Sign Up</a>
+          <a class="btn btn-outline-secondary me-3" routerLink="/register"
+            >Sign Up</a
+          >
         </li>
         <li class="nav-item">
-          <a class="btn btn-outline-secondary me-3" routerLink="/login">Login</a>
+          <a class="btn btn-outline-secondary me-3" routerLink="/login"
+            >Login</a
+          >
         </li>
       </ul>
     </div>
