--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -24,6 +24,14 @@
           <a class="nav-link" href="#">Contact</a>
         </li>
         <li class="nav-item">
+          <a class="btn btn-outline-secondary me-3" routerLink="/"
+            >Update Profile</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="btn btn-outline-secondary me-3" routerLink="/">Logout</a>
+        </li>
+        <li class="nav-item">
           <a class="btn btn-outline-secondary me-3" routerLink="/register"
             >Sign Up</a
           >
