created update user page

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -24,7 +24,7 @@
           <a class="nav-link" href="#">Contact</a>
         </li>
         <li class="nav-item">
-          <a class="btn btn-outline-secondary me-3" routerLink="/"
+          <a class="btn btn-outline-secondary me-3" routerLink="/updateUser"
             >Update Profile</a
           >
         </li>
