creating create quiz page

--- a/src/app/create-quiz/create-quiz.component.html
+++ b/src/app/create-quiz/create-quiz.component.html
@@ -11,58 +11,62 @@
             type="text"
             class="form-control"
             id="quizTitle"
-            formControlName="title"
+            formControlName="quizTitle"
             placeholder="Enter quiz title"
           />
         </div>
         <div formArrayName="questions">
-          @for (question of questionsFormArray.controls; track $index; let
-          i=$index) {
-          <div>
-            <div [formGroupName]="i" class="question-group mb-4">
-              <div class="card">
-                <div class="card-header">
-                  <div>
-                    <h5>Question {{ i + 1 }}</h5>
+          @for (question of questionsFormArray.controls; track $index; let i =
+          $index) {
+          <div [formGroupName]="i" class="question-group mb-4">
+            <div class="card">
+              <div class="card-header">
+                <h5>Question {{ i + 1 }}</h5>
+              </div>
+              <div class="card-body">
+                <label [for]="'text' + i" class="form-label"
+                  >Question Text</label
+                >
+                <input
+                  type="text"
+                  [id]="'text' + i"
+                  class="form-control mb-2"
+                  formControlName="text"
+                  placeholder="Enter your question"
+                />
+                <div formArrayName="options">
+                  @for (option of getOptionsFormArray(i).controls; track $index;
+                  let j = $index) {
+                  <div class="mb-2">
+                    <div class="input-group">
+                      <div class="input-group-text">
+                        <input
+                          type="radio"
+                          [name]="'optionOfQuestion' + i"
+                          class="form-check-input"
+                          [value]="j"
+                          [formControl]="getCorrectOptionControl(i)"
+                        />
+                      </div>
+                      <input
+                        type="text"
+                        class="form-control"
+                        [formControlName]="j"
+                        [placeholder]="'Option ' + (j + 1)"
+                      />
+                    </div>
                   </div>
+                  }
                 </div>
-                <div class="card-body">
-                  <input
-                    type="text"
-                    class="form-control mb-2"
-                    formControlName="text"
-                    placeholder="Enter your question"
-                  />
-                  <div formArrayName="options">
-                    @for (option of getOptionsFormArray(i).controls; track
-                    $index;let j=$index) {
-                    <input
-                      type="text"
-                      class="form-control mb-2"
-                      [formControlName]="j"
-                      placeholder="Option {{ j + 1 }}"
-                    />
-                    }
-                  </div>
-                  <div>
-                    <label>Answer {{ i + 1 }}</label>
-                    <input 
-                    type="text"
-                    class="form-control mb-2"
-                    formControlName="correctOption"
-                    placeholder="Answer {{ i + 1 }}"
-                    />
-                  </div>
-                </div>
-                <div class="card-footer">
-                  <button
-                      type="button"
-                      class="btn btn-sm btn-danger"
-                      (click)="removeQuestion(i)"
-                    >
-                      Remove Question
-                    </button>
-                </div>
+              </div>
+              <div class="card-footer">
+                <button
+                  type="button"
+                  class="btn btn-sm btn-danger"
+                  (click)="removeQuestion(i)"
+                >
+                  Remove Question
+                </button>
               </div>
             </div>
           </div>
@@ -76,10 +80,7 @@
           >
             Add Question
           </button>
-          <button
-            type="submit"
-            class="btn btn-primary mx-2"
-          >
+          <button type="submit" class="btn btn-primary mx-2">
             Create Quiz
           </button>
         </div>
